@@ -42,28 +42,28 @@ echo "passed "
 
 # unget of only one file....
 setup_an_edit a
-docommand a7 "${unget} -r1.1.1.1 $s1" 0 "1.1.1.1\n" ""
+docommand a7 "${vg_unget} -r1.1.1.1 $s1" 0 "1.1.1.1\n" ""
 test -f $g1 && fail a7 unget failed to remove $g1
-docommand a8 "${unget} $s1" 0 "1.2\n" ""
+docommand a8 "${vg_unget} $s1" 0 "1.2\n" ""
 
 setup_an_edit b
-docommand b7 "${unget} -r1.1.1.1 -s $s1" 0 "" ""
+docommand b7 "${vg_unget} -r1.1.1.1 -s $s1" 0 "" ""
 test -f $g1 && fail b7 unget -s failed to remove $g1
-docommand b8 "${unget} -s $s1" 0 "" ""
+docommand b8 "${vg_unget} -s $s1" 0 "" ""
 
 setup_an_edit c
-docommand c7 "${unget} -n -r1.1.1.1 $s1" 0 "1.1.1.1\n" ""
+docommand c7 "${vg_unget} -n -r1.1.1.1 $s1" 0 "1.1.1.1\n" ""
 test -f $g1 || fail c7 unget -n removed $g1
-docommand c8 "${unget} -n $s1" 0 "1.2\n" ""
+docommand c8 "${vg_unget} -n $s1" 0 "1.2\n" ""
 
 setup_an_edit d
-docommand d7 "${unget} -r1.1.1.1 -n -s $s1" 0 "" ""
+docommand d7 "${vg_unget} -r1.1.1.1 -n -s $s1" 0 "" ""
 test -f $g1 || fail d7 unget -n removed $g1
-docommand d8 "${unget} -n -s $s1" 0 "" ""
+docommand d8 "${vg_unget} -n -s $s1" 0 "" ""
 
 
 setup_an_edit e
-docommand e7 "${unget} -r1.1.1.1 $s1 $s2" 0 "\
+docommand e7 "${vg_unget} -r1.1.1.1 $s1 $s2" 0 "\
 \ns.new1.txt:\
 \n1.1.1.1\
 \n\
@@ -74,23 +74,23 @@ docommand e7 "${unget} -r1.1.1.1 $s1 $s2" 0 "\
 test -f $g1 && fail e7 unget failed to remove $g1
 test -f $g2 && fail e7 unget failed to remove $g2
 
-docommand e8 "${unget} $s1 $s2" 0 \
+docommand e8 "${vg_unget} $s1 $s2" 0 \
  "\ns.new1.txt:\n1.2\n\ns.new2.txt:\n1.2\n" ""
 
 
 
 setup_an_edit f
-docommand f7 "${unget} -r1.1.1.1 -s $s1 $s2" 0 "" ""
+docommand f7 "${vg_unget} -r1.1.1.1 -s $s1 $s2" 0 "" ""
 test -f $g1 && fail f7 unget -s failed to remove $g1
 test -f $g2 && fail f7 unget -s failed to remove $g2
-docommand f8 "${unget} -s $s1 $s2" 0 "" ""
+docommand f8 "${vg_unget} -s $s1 $s2" 0 "" ""
 
 setup_an_edit g
-docommand g7 "${unget} -r1.1.1.1 -n $s1 $s2" 0 \
+docommand g7 "${vg_unget} -r1.1.1.1 -n $s1 $s2" 0 \
  "\ns.new1.txt:\n1.1.1.1\n\ns.new2.txt:\n1.1.1.1\n" ""
 test -f $g1 || fail g7 unget -n removed $g1
 test -f $g2 || fail g7 unget -n removed $g2
-docommand g8 "${unget} -s $s1 $s2" 0 "" ""
+docommand g8 "${vg_unget} -s $s1 $s2" 0 "" ""
 
 
 ###
